--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#this is optional
+spring.jpa.show-sql=true
 
 # to always initialize a database using scripts
 spring.sql.init.mode=always
 
+schema=${pagination_sorting_app: }
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pagination_sorting_app?udrUnicode=true&useLegacyDatetimeCode=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/${schema}?udrUnicode=true&useLegacyDatetimeCode=false&serverTimeZone=UTC
 
 
 server.port=8090
